fix text visibility

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1217,7 +1217,7 @@ section {
 	float: left;
 	width: 44px;
 	height: 44px;
-	background: #add8e6;
+	background: green;
 	display: flex;
 	justify-content: center;
 	align-items: center;
